# documentation

./: .flake8  .gitignore  .gitmodules  .lycheeignore  .pre-commit-config.yaml  .python-version  .vale.ini  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  Onboarding analysts.md  Onboarding.md  Open Data Manifesto.md  README.md  codelist creation.md  justfile  main.py  mkdocs.test.yml  mkdocs.yml  mkdocs_theme.yml  public_docs.json  pyproject.toml  render.yaml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.prod.in  requirements.prod.txt  requirements.txt  run.sh  snomed.md  study_definition.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: .vale.ini  dependabot.yml
databuilder/: justfile  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  snex.conf  update-version.py
docs/: _headers  _redirects  access-emis.md  access-policies.md  actions-cohortextractor.md  actions-intro.md  actions-pipelines.md  actions-reusable.md  actions-scripts.md  adding-a-paper.md  apply-for-access.md  applying-to-use-opensafely.md  backend-contracts.md  backend-implementer-integration.md  case-control-studies.md  code-of-conduct.md  code-reviews-for-authors.md  code-reviews-for-reviewers.md  code-reviews-pull-request.md  code-reviews.md  codelist-creation.md  codelist-intro.md  codelist-project.md  codelist-snomed.md  codelist-updating.md  codelist_creation.md  codelist_intro.md  cohortextractor.md  contracts-intro.md  contracts-reference.md  contributing.md  contributorship-and-content-guidance.md  copiloting-service.md  (+176 more)
(+195 files in other folders)
